--- a/index.html
+++ b/index.html
@@ -1,15 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="resource/codigo-binario.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>DDaS Desarrollador</title>
 </head>
-<body>
-    
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<body>
+    <!DOCTYPE html>
+    <html lang="es">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Portafolio - David Castro</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    </head>
+
+    <body>
+
+        <!-- Header / Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand fw-bold" href="#">David Castro</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#perfil">Perfil</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#habilidades">Habilidades</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#educacion">Educación</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#experiencia">Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portafolio">Portafolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Perfil -->
+        <section id="perfil" class="py-5 bg-light">
+            <div class="container text-center">
+                <img src="https://via.placeholder.com/150" class="rounded-circle mb-3" alt="Foto de perfil">
+                <h2>Jerson David Oviedo Castro</h2>
+                <p class="text-muted">Técnico en sistemas - Desarrollador</p>
+            </div>
+        </section>
+
+        <!-- Descripción y Habilidades -->
+        <section id="habilidades" class="py-5">
+            <div class="container">
+                <h3 class="mb-3">Sobre mí</h3>
+                <p>Soy un apasionado por la tecnología y el desarrollo de software. Me gusta aprender nuevas
+                    herramientas y lenguajes, y disfruto resolver problemas con soluciones creativas.</p>
+
+                <h3 class="mt-4 mb-3">Habilidades</h3>
+                <div>
+                    <span class="badge bg-primary me-2 mb-2">Microsoft Office</span>
+                    <span class="badge bg-success me-2 mb-2">C#</span>
+                    <span class="badge bg-warning text-dark me-2 mb-2">JavaScript</span>
+                    <span class="badge bg-info text-dark me-2 mb-2">Python</span>
+                    <span class="badge bg-danger me-2 mb-2">HTML</span>
+                </div>
+            </div>
+        </section>
+
+        <!-- Educación y Experiencia -->
+        <section id="educacion-experiencia" class="py-5 bg-light">
+            <div class="container">
+                <div class="row">
+                    <!-- Educación -->
+                    <div class="col-md-6" id="educacion">
+                        <h3>Educación</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">Bachiller - Instituto Tecnológico Salesiano "Eloy Valenzuela"
+                            </li>
+                            <li class="list-group-item">Técnico en sistemas - Mantenimiento preventivo y correctivo</li>
+                            <li class="list-group-item">Técnico en desarrollo de software</li>
+                        </ul>
+                    </div>
+                    <!-- Experiencia -->
+                    <div class="col-md-6" id="experiencia">
+                        <h3>Experiencia</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">Auxiliar de sistemas</li>
+                            <li class="list-group-item">Soporte preventivo a equipos de cómputo</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Portafolio -->
+        <section id="portafolio" class="py-5">
+            <div class="container text-center">
+                <h3 class="mb-4">Portafolio</h3>
+                <div class="row g-4">
+                    <div class="col-md-4">
+                        <img src="https://via.placeholder.com/300x200" class="img-fluid rounded shadow"
+                            alt="Proyecto 1">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="https://via.placeholder.com/300x200" class="img-fluid rounded shadow"
+                            alt="Proyecto 2">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="https://via.placeholder.com/300x200" class="img-fluid rounded shadow"
+                            alt="Proyecto 3">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <footer id="contacto" class="bg-dark text-white py-4">
+            <div class="container text-center">
+                <p class="mb-1">Contacto:</p>
+                <p class="mb-1">📧 Email: test@test.com</p>
+                <p>📞 Teléfono: 74657374656f</p>
+                <small>&copy; 2025 David Castro. Todos los derechos reservados.</small>
+            </div>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
+
+    </html>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
