Actualizacion de imagenes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!-- Perfil -->
         <section id="perfil" class="py-5 bg-light">
             <div class="container text-center">
-                <img src="https://via.placeholder.com/150" class="rounded-circle mb-3" alt="Foto de perfil">
+                <img src="resource/servicio-al-cliente.png" class="rounded-circle mb-3" alt="Foto de perfil">
                 <h2>Jerson David Oviedo Castro</h2>
                 <p class="text-muted">Técnico en sistemas - Desarrollador</p>
             </div>
@@ -102,15 +102,15 @@
                 <h3 class="mb-4">Portafolio</h3>
                 <div class="row g-4">
                     <div class="col-md-4">
-                        <img src="https://via.placeholder.com/300x200" class="img-fluid rounded shadow"
+                        <img src="resource/Designer.jpeg" class="img-fluid rounded shadow"
                             alt="Proyecto 1">
                     </div>
                     <div class="col-md-4">
-                        <img src="https://via.placeholder.com/300x200" class="img-fluid rounded shadow"
+                        <img src="resource/Designer (1).jpeg" class="img-fluid rounded shadow"
                             alt="Proyecto 2">
                     </div>
                     <div class="col-md-4">
-                        <img src="https://via.placeholder.com/300x200" class="img-fluid rounded shadow"
+                        <img src="resource/Designer (2).jpeg" class="img-fluid rounded shadow"
                             alt="Proyecto 3">
                     </div>
                 </div>
