Cambio responsive a Foto de perfil y adicion de evento Hover

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="resource/codigo-binario.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>DDaS Desarrollador</title>
@@ -46,7 +47,7 @@
         <!-- Perfil -->
         <section id="perfil" class="py-5 bg-light">
             <div class="container text-center">
-                <img src="resource/servicio-al-cliente.png" class="rounded-circle mb-3" alt="Foto de perfil">
+                <img src="resource/servicio-al-cliente.png" class="img-fluid rounded-circle mb-3" alt="Foto de perfil">
                 <h2>Jerson David Oviedo Castro</h2>
                 <p class="text-muted">Técnico en sistemas - Desarrollador</p>
             </div>
@@ -101,15 +102,15 @@
             <div class="container text-center">
                 <h3 class="mb-4">Portafolio</h3>
                 <div class="row g-4">
-                    <div class="col-md-4">
+                    <div class="col-md-4 hvr">
                         <img src="resource/Designer.jpeg" class="img-fluid rounded shadow"
                             alt="Proyecto 1">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 hvr">
                         <img src="resource/Designer (1).jpeg" class="img-fluid rounded shadow"
                             alt="Proyecto 2">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 hvr">
                         <img src="resource/Designer (2).jpeg" class="img-fluid rounded shadow"
                             alt="Proyecto 3">
                     </div>
